--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "express",
     "service"
   ],
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/cstn/rocklab-service"
