--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.4.2",
     "swagger-jsdoc": "^5.0.1",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@rocklab/eslint-config-node": "^2.0.0",
